Added the footer subscribe form

--- a/index.html
+++ b/index.html
@@ -589,6 +589,35 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-subscribe-form-container">
+          <form class="footer-subscribe-form">
+            <label class="footer-subscribe-form-description" for="user-email"
+              >Subscribe</label
+            >
+            <div class="footer-subscribe-form-button-wrapper">
+            <input
+              class="footer-subscribe-form-input"
+              id="user-email"
+              name="user-email"
+              type="text"
+              placeholder="E-mail"
+              required
+            />
+          </form>
+          <button class="footer-subscribe-button" type="submit">
+            Subscribe
+            <svg
+              class="footer-subscribe-button-icon"
+              width="24"
+              height="24"
+              aria-label="subscribe button icon"
+            >
+              <use href="./images/icons.svg#icon-subscribe-frame"></use>
+            </svg>
+          </button>
+        </div>
+        </div>
       </div>
     </footer>
   </body>
