--- a/index.html
+++ b/index.html
@@ -592,13 +592,13 @@
 
         <div class="footer-subscribe-form-container">
           <form class="footer-subscribe-form">
-            <label class="footer-subscribe-form-description" for="user-email"
+            <label class="footer-subscribe-form-description" for="footer-user-email"
               >Subscribe</label
             >
             <div class="footer-subscribe-form-button-wrapper">
             <input
               class="footer-subscribe-form-input"
-              id="user-email"
+              id="footer-user-email"
               name="user-email"
               type="text"
               placeholder="E-mail"
@@ -620,5 +620,112 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-close-button" type="button">
+        <svg 
+          class="modal-close-button-icon" 
+          width="8" 
+          height="8" 
+          aria-label="button close icon">
+          <use href="./images/icons.svg#icon-close-button"></use>
+        </svg>
+      </button>
+      <p class="modal-description">Leave your contacts and we will call you back</p>
+
+      <div class="modal-form-input-wrapper">
+        <form class="modal-form-input">
+          <label class="modal-form-input-description" for="user-name" >Name</label>
+          <div class="modal-input-wrapper">
+            <input 
+              class="modal-input" 
+              id="user-name" 
+              name="user-name" 
+              type="text" 
+              required >
+            <svg 
+              class="modal-input-icon"
+              width="18"
+              height="18"
+              aria-label="person icon">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
+          </div>
+        </form>
+      </div>
+
+      <div class="modal-form-input-wrapper">
+        <form class="modal-form-input">
+          <label class="modal-form-input-description" for="user-phone" >Phone</label>
+          <div class="modal-input-wrapper">
+            <input 
+              class="modal-input" 
+              id="user-phone" 
+              name="user-phone" 
+              type="tel" 
+              required >
+            <svg 
+              class="modal-input-icon"
+              width="18"
+              height="18"
+              aria-label="phone icon">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+        </form>
+      </div>
+
+      <div class="modal-form-input-wrapper">
+        <form class="modal-form-input">
+          <label class="modal-form-input-description" for="user-email" >Email</label>
+          <div class="modal-input-wrapper">
+            <input 
+              class="modal-input" 
+              id="user-email" 
+              name="user-email" 
+              type="email" 
+              required >
+            <svg 
+              class="modal-input-icon"
+              width="18"
+              height="18"
+              aria-label="email icon">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+        </form>
+      </div>
+
+      <div class="modal-form-textarea-wrapper">
+        <form class="modal-form-textarea">
+          <label 
+            class="modal-form-textarea-label"
+            for="user-comment" >Comment</label>
+          <textarea 
+            class="modal-textarea"
+            id="user-comment"
+            name="user-comment"
+            placeholder="Text input"
+            required
+            ></textarea>
+        </form>
+      </div>
+
+      <div class="modal-form-checkbox-wrapper">
+        <form class="modal-form-checkbox">
+          <input 
+            class="modal-checkbox" 
+            id="user-privacy-policy"
+            name="user-privacy-policy"
+            type="checkbox">
+          <label 
+          class="modal-checkbox-description" for="user-privacy-policy">I accept the terms and conditions of the <a href="" class="modal-checkbox-description-privacy-policy-link">Privacy Policy</a></label>
+        </form>
+      </div>
+
+      <button class="modal-button" type="submit">Send</button>
+
+      </div>
+    </div>
   </body>
 </html>
