--- a/index.html
+++ b/index.html
@@ -727,6 +727,7 @@
               id="user-privacy-policy"
               name="user-privacy-policy"
               type="checkbox"
+              required
             />
             <label
               class="modal-form-checkbox-description"
